Finished the project finally

--- a/index.html
+++ b/index.html
@@ -10,34 +10,39 @@
     
 <p>
     <ul class="left-nav">
-        <li><a href="about.asp">About</a></li>
-        <li><a href="store.asp">Store</a></li>
+        <li><a class="about" href="about.asp">About</a></li>
+        <li><a class="store" href="store.asp">Store</a></li>
     </ul>
     <ul class="right-align">
-        <li><a href="gmail.asp">Gmail</a></li>
-        <li><a href="images.asp">Images</a></li>
+        <li><a class="gmail" href="gmail.asp">Gmail</a></li>
+        <li><a class="images"ref="images.asp">Images</a></li>
+        <li><a ref="apps.asp"><img src="app-drawer.png" class="apps"></a></li>
         <li><a class="sign-in" href="sign-in.asp">Sign in</a></li>
     </ul> 
 </p>
 <div class="center">
   <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google">
   <form>
-      <input class="search" type="search" name="googlesearch"><br><br>
-      <input type="button" value="Google Search">
-      <input type="button" value="I'm Feeling Lucky">
+    <div class=border>
+        <img src="search-icon.png" class="magnify">
+      <input class="search-box-input" type="text" name="googlesearch">
+      <img src="microphone-2.png" class="microphone">
+    </div>
+      <input class="button" type="button" value="Google Search">
+      <input class="button"type="button" value="I'm Feeling Lucky">
   </form>
 </div>
 </div>
 <footer id="footer"> 
     <ul class="left-nav">
-        <li><a href="advertising.asp">Advertising</a></li>
-        <li><a href="business.asp">Business</a></li>
+        <li><a class="bottom" href="advertising.asp">Advertising</a></li>
+        <li><a class="bottom" href="business.asp">Business</a></li>
     <li><a href="how-search-works.asp">How Search works</a></   li>
     </ul>
     <ul class="right-align">
-        <li><a href="privacy.asp">Privacy</a></li>
-        <li><a href="terms.asp">Terms</a></li>
-        <li><a href="settings.asp">Settings</a></li>
+        <li><a class="bottom" href="privacy.asp">Privacy</a></li>
+        <li><a class="bottom" href="terms.asp">Terms</a></li>
+        <li><a class="bottom" href="settings.asp">Settings</a></li>
     </ul> 
 </footer>
 </div>
